--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
 <script>
 /* CONFIG */
-const FLOW_URL = "https://default9d8868a5c1dc4786aff1f7d04646be.9a.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/9ed041ac7ca143a0b262334d9dfc13d5/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=il-cX-qHDZbGSxE2OnN56BK2jdJIgxWXFIStUm65G6g"
-;const ID_REGEX = /^[0-9]{8,}$/;
+const FLOW_URL = "https://default9d8868a5c1dc4786aff1f7d04646be.9a.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/9ed041ac7ca143a0b262334d9dfc13d5/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=il-cX-qHDZbGSxE2OnN56BK2jdJIgxWXFIStUm65G6g";const ID_REGEX = /^[0-9]{8,}$/;
 
 /* All available courses */
 const ALL_COURSES = [
